update to html and base color of the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Kanban Board</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class="Kanban"></div> <!-- the main container for the board-->
+    <div class="kanban__column"></div> <!-- represent a single column on the board-->
+    <div class="kanban__column-title">Not Started</div> <!-- represent a title for said column on the board-->
+    <div class="kanban__items"></div> <!-- to store items we drop down in that column on the board-->
+    <script src="js/main.js" type="module"></script>
+    <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
