--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <title>Kanban Board</title>
 </head>
 <body>
-    <div class="Kanban"></div> <!-- the main container for the board-->
-    <div class="kanban__column"></div> <!-- represent a single column on the board-->
+    <div class="Kanban"> <!-- the main container for the board-->
+    <div class="kanban__column"> <!-- represent a single column on the board-->
     <div class="kanban__column-title">Not Started</div> <!-- represent a title for said column on the board-->
-    <div class="kanban__items"></div> <!-- to store items we drop down in that column on the board-->
+    <div class="kanban__items"> <!-- to store items we drop down in that column on the board-->
+    <div contenteditable="" class="kanban__item-input">Wash the dishes</div> 
+    <!-- 
+        - line 15 is the area that the user could edit.
+        - contenteditable will allow users to make edits to that input section 
+    -->
+    <div class="kanban__dropzone"></div>
+    <!-- 
+        - line 20 is going to highlight the area that the user drags and item over it.
+        - it will highlight the area above and below where the user will drop the item.
+    -->
+    </div>
+    <button class="kanban__add-item type="button">+ add</button> <!-- - adding a button to the column using type="button" and the name on the button will be "+ add".
+    - code line 11 - 20 is the basic structure on the kanban board.-->
+    
+    </div>
+</div>
+
     <script src="js/main.js" type="module"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
