--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Kanban Board</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
         - it will highlight the area above and below where the user will drop the item.
     -->
     </div>
-    <button class="kanban__add-item type="button">+ add</button> <!-- - adding a button to the column using type="button" and the name on the button will be "+ add".
+    <button class="kanban__add-item type="button">+ Add</button> <!-- - adding a button to the column using type="button" and the name on the button will be "+ add".
     - code line 11 - 20 is the basic structure on the kanban board.-->
     
     </div>
