--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         - line 15 is the area that the user could edit.
         - contenteditable will allow users to make edits to that input section 
     -->
-    <div class="kanban__dropzone"></div>
+    <div class="kanban__dropzone kanban__dropzone--active"></div>
     <!-- 
         - line 20 is going to highlight the area that the user drags and item over it.
         - it will highlight the area above and below where the user will drop the item.
