--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Kanban Board</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
