api js file started

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-    <script src="main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
