updated and fixed flex on css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Kanban Board</title>
 </head>
 <body>
-    <div class="Kanban"> <!-- the main container for the board-->
+    <div class="kanban"> <!-- the main container for the board-->
     <div class="kanban__column"> <!-- represent a single column on the board-->
     <div class="kanban__column-title">Not Started</div> <!-- represent a title for said column on the board-->
     <div class="kanban__items"> <!-- to store items we drop down in that column on the board-->
