--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Kanban Board</title>
 </head>
 <body>
+    <h1>Cotton Candy Kanban Board</h1>
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style> <!-- this is the best way I found to center my header w/o creating issues with the flex container for the kanban class-->
     <div class="kanban"> <!-- the main container for the board-->
     <div class="kanban__column"> <!-- represent a single column on the board-->
     <div class="kanban__column-title">Not Started</div> <!-- represent a title for said column on the board-->
