--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 </div>
 
     <script src="js/main.js" type="module"></script>
+    <script src="/js/api/KanbanAPI.js" type="module"></script>
+    <script src="js/view/Column.js" type="module"></script>
+    <script src="js/view/DropZone.js" type="module"></script>
+    <script src="js/view/Item.js" type="module"></script>
+    <script src="js/view/Kanban.js" type="module"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
