--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     </div> -->
 </div>
 
-    <script src="js/main.js" type="module"></script>
-    <script src="/js/api/KanbanAPI.js" type="module"></script>
-    <script src="js/view/Column.js" type="module"></script>
-    <script src="js/view/DropZone.js" type="module"></script>
-    <script src="js/view/Item.js" type="module"></script>
-    <script src="js/view/Kanban.js" type="module"></script>
+    <script type="module" src="js/main.js" ></script>
+    <script type="module" src="/js/api/KanbanAPI.js"></script>
+    <script type="module" src="js/view/Column.js"></script>
+    <script type="module" src="js/view/DropZone.js"></script>
+    <script type="module" src="js/view/Item.js"></script>
+    <script type="module" src="js/view/Kanban.js"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
