--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Kanban Board</title>
@@ -37,11 +36,11 @@
 </div>
 
     <script type="module" src="js/main.js" ></script>
-    <script type="module" src="/js/api/KanbanAPI.js"></script>
+    <!-- <script type="module" src="/js/api/KanbanAPI.js"></script>
     <script type="module" src="js/view/Column.js"></script>
     <script type="module" src="js/view/DropZone.js"></script>
     <script type="module" src="js/view/Item.js"></script>
-    <script type="module" src="js/view/Kanban.js"></script>
+    <script type="module" src="js/view/Kanban.js"></script> -->
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
