--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div> -->
 </div>
 
-    <script type="module" src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <!-- <script type="module" src="/js/api/KanbanAPI.js"></script>
     <script type="module" src="js/view/Column.js"></script>
     <script type="module" src="js/view/DropZone.js"></script>
