--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </div> -->
 </div>
 
-    <script src="main.js" type="module"></script>
-    <script language="JavaScript" type="text/javascript"></script>
+    <script src="js/main.js" type="module"></script>
+    <!-- <script language="JavaScript" type="text/javascript"></script> -->
     <!-- <script type="module" src="/js/api/KanbanAPI.js"></script>
     <script type="module" src="js/view/Column.js"></script>
     <script type="module" src="js/view/DropZone.js"></script>
