--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 </div>
 
     <script src="js/main.js" type="module"></script>
-    <script language="JavaScript" type="text/javascript"></script>
-    <!-- <script type="module" src="/js/api/KanbanAPI.js"></script>
+    <!-- <script language="JavaScript" type="text/javascript"></script> -->
+    <script type="module" src="js/api/KanbanAPI.js"></script>
     <script type="module" src="js/view/Column.js"></script>
     <script type="module" src="js/view/DropZone.js"></script>
     <script type="module" src="js/view/Item.js"></script>
-    <script type="module" src="js/view/Kanban.js"></script> -->
+    <script type="module" src="js/view/Kanban.js"></script>
     <!-- module is important and needed for es6 import/export syntax for the solution today-->
 </body>
 </html>
