--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div> -->
 </div>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="js/main.js" type="text/html"></script>
     <!-- <script language="JavaScript" type="text/javascript"></script> -->
     <script type="module" src="js/api/KanbanAPI.js"></script>
     <script type="module" src="js/view/Column.js"></script>
